log
Wed 27 Sep 2023 09:47:54 PM UTC: 
 heap.c | 27 +++++++++++----------------
 1 file changed, 11 insertions(+), 16 deletions(-)
 tests:  0|4
total_score: 0/70
2ebf384
Wed 27 Sep 2023 09:48:39 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
cc24d97
Wed 27 Sep 2023 09:53:52 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
af878c1
Wed 27 Sep 2023 09:55:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:20:3: error: cannot convert to a pointer type
   20 |   return ((heapElem*)pq->heapArray[0])->data;
      |   ^~~~~~
Compilation failed
fa1c95f
Wed 27 Sep 2023 10:03:01 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
38c9879
Wed 27 Sep 2023 10:04:35 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
eac0137
Wed 27 Sep 2023 10:43:55 PM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:36:20: error: incompatible types when initializing type ‘heapElem *’ {aka ‘struct nodo *’} using type ‘heapElem’ {aka ‘struct nodo’}
   36 |   heapElem* temp = pq->heapArray[pq->size - 1];
      |                    ^~
heap.c:36:13: error: unused variable ‘temp’ [-Werror=unused-variable]
   36 |   heapElem* temp = pq->heapArray[pq->size - 1];
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
5903567
Wed 27 Sep 2023 10:44:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:36:12: error: unused variable ‘temp’ [-Werror=unused-variable]
   36 |   heapElem temp = pq->heapArray[pq->size - 1];
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
d9ada56
Wed 27 Sep 2023 10:45:15 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
45ec61a
Wed 27 Sep 2023 10:45:49 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
2456f59
Wed 27 Sep 2023 10:46:47 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
07f33c2
Wed 27 Sep 2023 11:19:30 PM UTC: 
 heap.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:45:7: error: unused variable ‘index’ [-Werror=unused-variable]
   45 |   int index = pq->size;
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
02276e5
Wed 27 Sep 2023 11:19:38 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d8947f9
Wed 27 Sep 2023 11:19:59 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
e7b3ebc
Wed 27 Sep 2023 11:20:53 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
f12daff
Wed 27 Sep 2023 11:29:21 PM UTC: 
 heap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
2f326b9
Wed 27 Sep 2023 11:29:39 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
3b5f52a
Wed 27 Sep 2023 11:37:29 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
ab177d0
Wed 27 Sep 2023 11:37:36 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
2224c10
Wed 27 Sep 2023 11:38:19 PM UTC: 
 heap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
c613d28
Wed 27 Sep 2023 11:38:55 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
7839d1b
Wed 27 Sep 2023 11:39:20 PM UTC: 
 heap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  3|2
total_score: 25/70
6c415b5
Wed 27 Sep 2023 11:42:00 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|2
total_score: 25/70
d3b974c
Wed 27 Sep 2023 11:42:42 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
07313ac
Wed 27 Sep 2023 11:44:09 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
dedb818
Wed 27 Sep 2023 11:44:20 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
114e876
Wed 27 Sep 2023 11:44:58 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
012fe4b
Wed 27 Sep 2023 11:45:38 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
080fbcf
Wed 27 Sep 2023 11:46:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d7eaf41
Wed 27 Sep 2023 11:46:35 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
3d29812
Wed 27 Sep 2023 11:47:35 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
ab57c21
Wed 27 Sep 2023 11:48:41 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
0daa848
Sat 30 Sep 2023 10:43:38 PM UTC: 
 heap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  6|2
total_score: 35/70
0fe30fa
Sat 30 Sep 2023 10:47:19 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
e61b2a2
Sat 14 Oct 2023 07:19:50 PM UTC: 
 heap.c | 16 +++-------------
 1 file changed, 3 insertions(+), 13 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:64:12: error: unused variable ‘temp’ [-Werror=unused-variable]
   64 |   heapElem temp = pq->heapArray[pq->size - 1];
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
01f3371
Sat 14 Oct 2023 07:20:02 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
d7178b3
Sat 14 Oct 2023 07:20:45 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
e299ddb
Sat 14 Oct 2023 07:22:33 PM UTC: 
 heap.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:66:14: error: format ‘%i’ expects argument of type ‘int’, but argument 2 has type ‘heapElem’ {aka ‘struct nodo’} [-Werror=format=]
   66 |     printf("%i ", pq->heapArray[i]);
      |             ~^    ~~~~~~~~~~~~~~~~
      |              |                 |
      |              int               heapElem {aka struct nodo}
cc1: all warnings being treated as errors
Compilation failed
f2ab6b9
Sat 14 Oct 2023 07:22:43 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
f040202
Sat 14 Oct 2023 07:23:28 PM UTC: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  7|1
total_score: 45/70
ce7daae
Sat 14 Oct 2023 07:23:47 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 45/70
d708bcc
Sat 14 Oct 2023 07:27:54 PM UTC: 
 heap.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:75:13: error: expected expression before ‘[’ token
   75 |     index = [2*index + 1]
      |             ^
heap.c:75:26: error: expected ‘;’ before ‘}’ token
   75 |     index = [2*index + 1]
      |                          ^
      |                          ;
   76 |   }
      |   ~                       
Compilation failed
4d80650
Sat 14 Oct 2023 07:28:04 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:75:13: error: expected expression before ‘[’ token
   75 |     index = [2*index + 1];
      |             ^
Compilation failed
4e1e7db
Sat 14 Oct 2023 07:28:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:75:13: error: incompatible types when assigning to type ‘int’ from type ‘heapElem’ {aka ‘struct nodo’}
   75 |     index = pq->heapArray[2*index + 1];
      |             ^~
Compilation failed
24174e1
Sat 14 Oct 2023 07:28:34 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:75:24: error: expected ‘;’ before ‘]’ token
   75 |     index = 2*index + 1;
      |                        ^
      |                        ;
heap.c:75:24: error: expected statement before ‘]’ token
Compilation failed
aa5e051
Sat 14 Oct 2023 07:29:11 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
74ecabe
